# Spright

./: .gitignore  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/models/: .gitignore  README.md
app/src/androidTest/assets/: broad_color_accuracy_cases.json  color_benchmark_cases.json  llm_color_cases.json
app/src/androidTest/java/com/example/ble1507/: BroadColorAccuracyInstrumentedTest.kt  ColorModelBenchmarkInstrumentedTest.kt  ExhibitionScreenInstrumentedTest.kt  InertialMotionLibSyntheticInstrumentedTest.kt  LlmColorAccuracyInstrumentedTest.kt  MixedColorRoutingInstrumentedTest.kt  RelativeColorModelInstrumentedTest.kt  TouchDesignerTcpInstrumentedTest.kt
app/src/debug/: AndroidManifest.xml
app/src/debug/kotlin/com/example/ble1507/: ComposeTestActivity.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: spright_penlight.glb
app/src/main/cpp/: CMakeLists.txt  ble1507_qwen.cpp
app/src/main/cpp/inertialmotionlib2/: README.md  inertialmotionlib2_jni.c
app/src/main/cpp/inertialmotionlib2/include/: IML_Common.h  InertialMotionLib2.h
app/src/main/java/com/example/ble1507/: InertialMotionLib2Compat.java
app/src/main/java/jp/co/sony/sprbox/imuadv/internal/: InertialMotionLib.kt
app/src/main/kotlin/com/example/ble1507/: Ble1507Client.kt  Cobs.kt  ExhibitionModels.kt  ExhibitionRecoveryPolicy.kt  ExhibitionScreen.kt  ImuNativeAttitudeEstimator.kt  ImuPacket.kt  ImuSpeedEstimator.kt  LedOutput.kt  MainActivity.kt  NativeQwenBridge.kt  QwenColorInterpreter.kt  QwenModelStore.kt  TouchDesignerTcpClient.kt
app/src/main/res/drawable/: launcher_foreground.xml  launcher_monochrome.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/test/java/com/example/ble1507/: BroadColorRuleTest.kt  ColorOutputTest.kt  DarkColorInterpretationTest.kt  ExhibitionModelsTest.kt  ExhibitionRecoveryPolicyTest.kt  ImuPacketTest.kt  ImuSpeedEstimatorTest.kt  PwmDutyGammaTest.kt  RelativeColorAdjustmentTest.kt  TouchDesignerTcpClientTest.kt
docs/: fable5-ui-review-prompt.md  inertial-motion-lib2-synthetic-xperia.json
docs/benchmarks/: xperia-1-vii-color-model-2026-07-18.json
docs/fable-handoff-2026-07-21/: FABLE_REVIEW_PROMPT.md  README.md  broad-color-accuracy-xperia.json  lint-results-debug.html  relative-color-model-xperia.json
docs/fable-revalidation-2026-07-21/: README.md  broad-color-production-xperia.json  lint-results-debug.html  lint-results-debug.xml  llm-color-qwen2.5-1.5b-xperia.json  llm-color-qwen2.5-3b-xperia-raw.json  llm-color-qwen3-0.6b-xperia.json  llm-color-qwen3.5-0.8b-xperia.json  relative-color-production-rule-xperia.json
gradle/: libs.versions.toml
tools/: generate_penlight_glb.py
